# PyQt-Fluent-Widgets

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
docs/: README_zh.md
examples/: utils.cmake
examples/BasicInput/: CMakeLists.txt
examples/BasicInput/CheckBox/: main.cpp
examples/BasicInput/ComboBox/: main.cpp
examples/BasicInput/IconWidget/: main.cpp
examples/BasicInput/PushButton/: main.cpp
examples/BasicInput/RadioButton/: main.cpp
examples/BasicInput/Slider/: CMakeLists.txt  main.cpp
examples/BasicInput/SwitchButton/: CMakeLists.txt  main.cpp
examples/BasicInput/ToolButton/: CMakeLists.txt  main.cpp
examples/DateTime/: CmakeLists.txt
examples/DateTime/CalendarPicker/: main.cpp
examples/DateTime/TimePicker/: main.cpp
examples/DialogFlyout/: CMakeLists.txt
examples/DialogFlyout/ColorDialog/: CMakeLists.txt  main.cpp
examples/DialogFlyout/Flyout/: CMakeLists.txt  main.cpp
examples/DialogFlyout/MessageBox/: main.cpp
examples/DialogFlyout/TeachingTip/: main.cpp
examples/FluentGallery/: CMakeLists.txt  main.cpp
examples/FluentGallery/Common/: Config.h  SignalBus.h  StyleSheet.h  Trie.cpp
examples/FluentGallery/Components/: LinkCard.h  SampleCard.cpp  SampleCard.h
examples/FluentGallery/Resource/: gallery.qrc
examples/FluentGallery/View/: BasicInputInterface.h  DateTimeInterface.cpp  DialogInterface.cpp  DialogInterface.h  GalleryInterface.h  HomeInterface.h  IconInterface.h  LayoutInterface.cpp  MainWindow.cpp  MainWindow.h  MenuInterface.cpp  MenuInterface.h  NavigationViewInterface.cpp  NavigationViewInterface.h  SettingInterface.cpp  SettingInterface.h  StatusInfoInterface.cpp  StatusInfoInterface.h  TextInterface.cpp
examples/Layout/: CMakeLists.txt
examples/Layout/FlowLayout/: main.cpp
examples/Material/: CMakeLists.txt
examples/Material/AcrylicBrush/: CMakeLists.txt  main.cpp
examples/Material/AcrylicComboBox/: CMakeLists.txt  main.cpp
examples/Material/AcrylicFlyout/: CMakeLists.txt  main.cpp
examples/Material/AcrylicLineEdit/: CMakeLists.txt  main.cpp
examples/Material/AcrylicMenu/: CMakeLists.txt  main.cpp
examples/Material/AcrylicToolTip/: CMakeLists.txt  main.cpp
examples/Media/: CMakeLists.txt  CmakeLists.txt
examples/Media/AvatarWidget/: CMakeLists.txt  main.cpp
examples/Media/MediaPlayer/: CMakeLists.txt  main.cpp
examples/Menu/: CmakeLists.txt
examples/Menu/CommandBar/: main.cpp
examples/Menu/Menu/: main.cpp
examples/Navigation/: CMakeLists.txt
examples/Navigation/Breadcrumb/: main.cpp
examples/Navigation/NavigationBar/: CMakeLists.txt  main.cpp
examples/Navigation/NavigationInterface/: CMakeLists.txt  main.cpp
examples/Navigation/Pivot/: main.cpp
examples/Navigation/SegmentedWidget/: main.cpp
examples/Navigation/TabView/: CMakeLists.txt  main.cpp
examples/Resource/qss/dark/: Navigation1.qss
examples/Resource/qss/light/: Navigation1.qss
examples/Scroll/: CmakeLists.txt
examples/Scroll/PipsPager/: CMakeLists.txt  main.cpp
examples/Scroll/ScrollArea/: CMakeLists.txt  main.cpp
examples/Shared/: Widget.h
examples/StatusInfo/InfoBadge/: main.cpp
examples/StatusInfo/InfoBar/: main.cpp
examples/StatusInfo/ProgressBar/: main.cpp
examples/StatusInfo/ProgressRing/: CMakeLists.txt  main.cpp
examples/StatusInfo/ToolTip/: main.cpp
examples/Text/: CMakeLists.txt
examples/Text/Label/: main.cpp
examples/Text/LineEdit/: main.cpp
examples/Text/SpinBox/: main.cpp
examples/Text/TextEdit/: CMakeLists.txt  main.cpp
examples/View/: CMakeLists.txt
examples/View/CardWidget/: CMakeLists.txt  Demo1.cpp  Demo3.cpp  main.cpp
examples/View/FlipView/: CMakeLists.txt  main.cpp
examples/View/ListView/: CMakeLists.txt  main.cpp
examples/View/TableView/: CMakeLists.txt  main.cpp
examples/View/TreeView/: CMakeLists.txt  main.cpp
examples/Window/: CmakeLists.txt
examples/Window/FluentWindow/: CMakeLists.txt  main.cpp
examples/Window/Login/: CMakeLists.txt  LoginWindow.ui  main.cpp
examples/Window/MSFluentWindow/: main.cpp
examples/Window/Settings/: CMakeLists.txt  Config.h  SettingInterface.cpp  main.cpp
examples/Window/SplashScreen/: main.cpp
examples/Window/SplitFluentWindow/: CMakeLists.txt  main.cpp
examples/examples/: CmakeLists.txt  utils.cmake
examples/examples/BasicInput/CheckBox/: CMakeLists.txt  main.cpp
examples/examples/BasicInput/ComboBox/: CMakeLists.txt  main.cpp
examples/examples/BasicInput/IconWidget/: CMakeLists.txt  main.cpp
examples/examples/BasicInput/PushButton/: CMakeLists.txt  main.cpp
examples/examples/BasicInput/RadioButton/: CMakeLists.txt  main.cpp
examples/examples/FluentGallery/: CMakeLists.txt  icon.rc  main.cpp
examples/examples/FluentGallery/Common/: Config.cpp  Icon.h  StyleSheet.cpp  Translator.h  Trie.h
examples/examples/FluentGallery/Components/: LinkCard.cpp
examples/examples/FluentGallery/Resource/i18n/: gallery.zh_CN.qm  gallery.zh_CN.ts
examples/examples/FluentGallery/View/: BasicInputInterface.cpp  DateTimeInterface.h  GalleryInterface.cpp  HomeInterface.cpp  IconInterface.cpp  LayoutInterface.h  MainWindow.cpp  ScrollInterface.cpp  ScrollInterface.h  SettingInterface.cpp  TextInterface.cpp  TextInterface.h  ViewInterface.cpp  ViewInterface.h
examples/examples/Material/: CmakeLists.txt
examples/examples/StatusInfo/: CmakeLists.txt
examples/examples/Window/Login/: CMakeLists.txt  LoginWindow.py.ui  main.cpp
(+69 files in other folders)
